@@ -1091,6 +1091,8 @@ body {
 
 <p><strong>log_menu</strong> | <code>point</code> | Position for the Log menu button.</p>
 
+<p><strong>tooltip_length</strong> | <code>["short", "long_menu", "long_all"]</code> | The length of power descriptions in tooltips. &lsquo;short&rsquo; will display only the power name. &lsquo;long_menu&rsquo; (the default setting) will display full tooltips, but only for powers that are in the Powers menu. &lsquo;long_all&rsquo; will display full tooltips for all powers.</p>
+
 <hr />
 
 <h4>MenuActiveEffects</h4>
